# CPP-ADVANCED

./: Basic_comands.cpp  CMakeLists.txt  main.cpp
Stacks and Queues/01.Lab/: 01.Reverse_string.cpp  02.stack_sum.cpp  03.simple_calculator.cpp  04.matching_brackets.cpp  05.print_even_numbers.cpp  06.supermarket.cpp  07.hot_potato.cpp
Stacks and Queues/02.Exercises/: 02.BasicQueueOperations.cpp  03.MaximumAndMinimumElement.cpp  04.FastFood.cpp  05.FashionBoutique.cpp  06.TruckTour.cpp  07.BalancedParentheses.cpp
Stacks and Queues/03.Demos/: BrowserHistory.cpp
