cmake_minimum_required(VERSION 3.28)
project(Advanced)

set(CMAKE_CXX_STANDARD 17)

add_executable(Advanced main.cpp
        "Stacks and Queues/01.Lab/01.Reverse_string.cpp"
        "Stacks and Queues/01.Lab/01.Reverse_string.cpp"
        "Stacks and Queues/03.Demos/BrowserHistory.cpp"
        "Stacks and Queues/01.Lab/02.stack_sum.cpp"
        "Stacks and Queues/01.Lab/03.simple_calculator.cpp"
        "Stacks and Queues/01.Lab/04.matching_brackets.cpp"
        "Stacks and Queues/01.Lab/05.print_even_numbers.cpp"
        "Stacks and Queues/01.Lab/06.supermarket.cpp"
        "Stacks and Queues/01.Lab/07.hot_potato.cpp"
        "Stacks and Queues/02.Exercises/01.Basic_stack_operations.cpp")
