cmake_minimum_required(VERSION 3.28)
project(Advanced)

set(CMAKE_CXX_STANDARD 17)

add_executable(Advanced main.cpp
        "01.Stacks and Queues/01.Lab/01.Reverse_string.cpp"
        "01.Stacks and Queues/01.Lab/01.Reverse_string.cpp"
        "01.Stacks and Queues/03.Demos/BrowserHistory.cpp"
        "01.Stacks and Queues/01.Lab/02.stack_sum.cpp"
        "01.Stacks and Queues/01.Lab/03.simple_calculator.cpp"
        "01.Stacks and Queues/01.Lab/04.matching_brackets.cpp"
        "01.Stacks and Queues/01.Lab/05.print_even_numbers.cpp"
        "01.Stacks and Queues/01.Lab/06.supermarket.cpp"
        "01.Stacks and Queues/01.Lab/07.hot_potato.cpp"
        "01.Stacks and Queues/02.Exercises/01.Basic_stack_operations.cpp"
        "01.Stacks and Queues/02.Exercises/02.BasicQueueOperations.cpp"
        "01.Stacks and Queues/02.Exercises/03.MaximumAndMinimumElement.cpp"
        "01.Stacks and Queues/02.Exercises/04.FastFood.cpp"
        "01.Stacks and Queues/02.Exercises/05.FashionBoutique.cpp"
        "01.Stacks and Queues/02.Exercises/06.TruckTour.cpp"
        "01.Stacks and Queues/02.Exercises/07.BalancedParentheses.cpp")
